== 2.2.3

* bug fix
  * Require string conversion for all values

== 2.2.2

* bug fix
  * Fix bug when checking for reconfirmable in templates

== 2.2.1

* bug fix
  * Fix regression with case_insensitive_keys
  * Fix regression when password is blank when it is invalid

== 2.2.0

* backwards incompatible changes
  * `headers_for` is deprecated, customize the mailer directly instead
  * All mailer methods now expect a second argument with delivery options
  * Default minimum password length is now 8 (by @carlosgaldino)
  * Support alternate sign in error message when email record does not exist (this adds a new I18n key to the locale file) (by @gabetax)
  * DeviseController responds only to HTML requests by default (call `DeviseController.respond_to` or `ApplicationController.respond_to` to add new formats)
  * Support Mongoid 3 onwards (by @durran)

* enhancements
  * Fix unlockable which could leak account existence on paranoid mode (by @latortuga)
  * Confirmable now has a confirm_within option to set a period while the confirmation token is still valid (by @promisedlandt)
  * Flash messages in controller now respects `resource_name` (by @latortuga)
  * Separate `sign_in` and `sign_up` on RegistrationsController (by @rubynortheast)
  * Add autofocus to default views (by @Radagaisus)
  * Unlock user on password reset (by @marcinb)
  * Allow validation callbacks to apply to virtual attributes (by @latortuga)

* bug fix
  * unconfirmed_email now uses the proper e-mail on salutation
  * Fix default email_regexp config to not allow spaces (by @kukula)
  * Fix a regression introduced on warden 1.2.1 (by @ejfinneran)
  * Properly camelize omniauth strategies (by @saizai)
  * Do not set flash messages for non navigational requests on session sign out (by @mathieul)
  * Set the proper fields as required on the lockable module (by @nickhoffman)
  * Respects Devise mailer default's reply_to (by @mrchrisadams)